completed create sale, create auction, and list sales pages. (need to inc user info when possible)

--- a/src/main/java/javaeetutorial/dukesbookstore/web/messages/Messages.properties
+++ b/src/main/java/javaeetutorial/dukesbookstore/web/messages/Messages.properties
@@ -94,3 +94,243 @@ Caption=Books in Shopping Cart
 ReqCustomerName=Please enter your name.
 ReqCreditCard=Please enter your credit card number.
 ConversionError=Input value is not a String.
+
+#
+#
+SalesCreated=Sale was successfully created.
+#SalesUpdated=Sale was successfully updated.
+#SalesDeleted=Sale was successfully deleted.
+CreateSalesTitle=Create New Sale
+CreateSalesSaveLink=Save
+CreateSalesShowAllLink=Show All Sales Items
+CreateSalesIndexLink=Index
+CreateSalesLabel_id=Id:
+CreateSalesRequiredMessage_id=The Id field is required.
+CreateSalesTitle_id=Id
+CreateSalesLabel_datelisted=Datelisted:
+CreateSalesTitle_datelisted=Datelisted
+CreateSalesLabel_duration=Auction Duration (in days):
+CreateSalesTitle_duration=Duration
+CreateSalesLabel_itemcondition=Item condition:
+CreateSalesTitle_itemcondition=Itemcondition
+CreateSalesLabel_postage=Postage:
+CreateSalesTitle_postage=Postage
+CreateSalesLabel_reserveprice=Reserve price:
+CreateSalesTitle_reserveprice=Reserveprice
+CreateSalesLabel_saleprice=Sale price:
+CreateSalesTitle_saleprice=Saleprice
+CreateSalesLabel_saletype=Sale type:
+CreateSalesTitle_saletype=Saletype
+CreateSalesLabel_startprice=Start price:
+CreateSalesTitle_startprice=Startprice
+CreateSalesLabel_buyeridId=BuyeridId:
+CreateSalesTitle_buyeridId=BuyeridId
+CreateSalesLabel_isbnIsbn=Book Listed:
+CreateSalesTitle_isbnIsbn=IsbnIsbn
+CreateSalesLabel_paymentidId=PaymentidId:
+CreateSalesTitle_paymentidId=PaymentidId
+CreateSalesLabel_selleridId=SelleridId:
+CreateSalesTitle_selleridId=SelleridId
+EditSalesTitle=Edit Sales
+EditSalesSaveLink=Save
+EditSalesViewLink=View
+EditSalesShowAllLink=Show All Sales Items
+EditSalesIndexLink=Index
+EditSalesLabel_id=Id:
+EditSalesRequiredMessage_id=The Id field is required.
+EditSalesTitle_id=Id
+EditSalesLabel_datelisted=Datelisted:
+EditSalesTitle_datelisted=Datelisted
+EditSalesLabel_duration=Duration:
+EditSalesTitle_duration=Duration
+EditSalesLabel_itemcondition=Item condition:
+EditSalesTitle_itemcondition=Itemcondition
+EditSalesLabel_postage=Postage:
+EditSalesTitle_postage=Postage
+EditSalesLabel_reserveprice=Reserve price:
+EditSalesTitle_reserveprice=Reserveprice
+EditSalesLabel_saleprice=Sale price:
+EditSalesTitle_saleprice=Saleprice
+EditSalesLabel_saletype=Saletype:
+EditSalesTitle_saletype=Saletype
+EditSalesLabel_startprice=Start price:
+EditSalesTitle_startprice=Startprice
+EditSalesLabel_buyeridId=BuyeridId:
+EditSalesTitle_buyeridId=BuyeridId
+EditSalesLabel_isbnIsbn=Book Offered:
+EditSalesTitle_isbnIsbn=IsbnIsbn
+EditSalesLabel_paymentidId=PaymentidId:
+EditSalesTitle_paymentidId=PaymentidId
+EditSalesLabel_selleridId=SelleridId:
+EditSalesTitle_selleridId=SelleridId
+ViewSalesTitle=View
+#ViewSalesDestroyLink=Destroy
+#ViewSalesEditLink=Edit
+ViewSalesCreateLink=Create New Sale
+ViewSalesShowAllLink=Show All Sales Items
+ViewSalesIndexLink=Index
+ViewSalesLabel_id=Id:
+ViewSalesTitle_id=Id
+ViewSalesLabel_datelisted=Datelisted:
+ViewSalesTitle_datelisted=Datelisted
+ViewSalesLabel_duration=Duration:
+ViewSalesTitle_duration=Duration
+ViewSalesLabel_itemcondition=Item condition:
+ViewSalesTitle_itemcondition=Itemcondition
+ViewSalesLabel_postage=Postage:
+ViewSalesTitle_postage=Postage
+ViewSalesLabel_reserveprice=Reserve price:
+ViewSalesTitle_reserveprice=Reserveprice
+ViewSalesLabel_saleprice=Sale price:
+ViewSalesTitle_saleprice=Saleprice
+ViewSalesLabel_saletype=Saletype:
+ViewSalesTitle_saletype=Saletype
+ViewSalesLabel_startprice=Start price:
+ViewSalesTitle_startprice=Startprice
+ViewSalesLabel_buyeridId=BuyeridId:
+ViewSalesTitle_buyeridId=BuyeridId
+ViewSalesLabel_isbnIsbn=Book ISBN:
+ViewSalesTitle_isbnIsbn=IsbnIsbn
+ViewSalesLabel_paymentidId=PaymentidId:
+ViewSalesTitle_paymentidId=PaymentidId
+ViewSalesLabel_selleridId=SelleridId:
+ViewSalesTitle_selleridId=SelleridId
+ListSalesTitle=List
+ListSalesEmpty=(No Sales Items Found)
+#ListSalesDestroyLink=Destroy
+#ListSalesEditLink=Edit
+ListSalesViewLink=View
+ListSalesCreateLink=Create New Sale
+ListSalesIndexLink=Home Page
+ListSalesTitle_id=Id
+ListSalesTitle_datelisted=Date Listed
+ListSalesTitle_duration=Duration
+ListSalesTitle_itemcondition=Item Condition
+ListSalesTitle_postage=Postage
+ListSalesTitle_reserveprice=Reserve Price
+ListSalesTitle_saleprice=Sale Price
+ListSalesTitle_saletype=Sale Type
+ListSalesTitle_startprice=Start Price
+ListSalesTitle_buyeridId=Buyer Id
+ListSalesTitle_isbnIsbn=Isbn
+ListSalesTitle_paymentidId=Payment Id
+ListSalesTitle_selleridId=Seller Id
+
+AuctionCreated=Auction was successfully created.
+#AuctionUpdated=Auction was successfully updated.
+#AuctionDeleted=Auction was successfully deleted.
+CreateAuctionTitle=Create New Auction
+CreateAuctionSaveLink=Save
+CreateAuctionShowAllLink=Show All Auction Items
+CreateAuctionIndexLink=Index
+CreateAuctionLabel_id=Id:
+CreateAuctionRequiredMessage_id=The Id field is required.
+CreateAuctionTitle_id=Id
+CreateAuctionLabel_datelisted=Datelisted:
+CreateAuctionTitle_datelisted=Datelisted
+CreateAuctionLabel_duration=Auction Duration (in days):
+CreateAuctionTitle_duration=Duration
+CreateAuctionLabel_itemcondition=Item condition:
+CreateAuctionTitle_itemcondition=Itemcondition
+CreateAuctionLabel_postage=Postage:
+CreateAuctionTitle_postage=Postage
+CreateAuctionLabel_reserveprice=Reserve price:
+CreateAuctionTitle_reserveprice=Reserveprice
+CreateAuctionLabel_saleprice=Sale price:
+CreateAuctionTitle_saleprice=Saleprice
+CreateAuctionLabel_saletype=Sale type:
+CreateAuctionTitle_saletype=Saletype
+CreateAuctionLabel_startprice=Start price:
+CreateAuctionTitle_startprice=Startprice
+CreateAuctionLabel_buyeridId=BuyeridId:
+CreateAuctionTitle_buyeridId=BuyeridId
+CreateAuctionLabel_isbnIsbn=Book Listed:
+CreateAuctionTitle_isbnIsbn=IsbnIsbn
+CreateAuctionLabel_paymentidId=PaymentidId:
+CreateAuctionTitle_paymentidId=PaymentidId
+CreateAuctionLabel_selleridId=SelleridId:
+CreateAuctionTitle_selleridId=SelleridId
+EditAuctionTitle=Edit Auction
+EditAuctionSaveLink=Save
+EditAuctionViewLink=View
+EditAuctionShowAllLink=Show All Auction Items
+EditAuctionIndexLink=Index
+EditAuctionLabel_id=Id:
+EditAuctionRequiredMessage_id=The Id field is required.
+EditAuctionTitle_id=Id
+EditAuctionLabel_datelisted=Datelisted:
+EditAuctionTitle_datelisted=Datelisted
+EditAuctionLabel_duration=Duration:
+EditAuctionTitle_duration=Duration
+EditAuctionLabel_itemcondition=Item condition:
+EditAuctionTitle_itemcondition=Itemcondition
+EditAuctionLabel_postage=Postage:
+EditAuctionTitle_postage=Postage
+EditAuctionLabel_reserveprice=Reserve price:
+EditAuctionTitle_reserveprice=Reserveprice
+EditAuctionLabel_saleprice=Sale price:
+EditAuctionTitle_saleprice=Saleprice
+EditAuctionLabel_saletype=Saletype:
+EditAuctionTitle_saletype=Saletype
+EditAuctionLabel_startprice=Start price:
+EditAuctionTitle_startprice=Startprice
+EditAuctionLabel_buyeridId=BuyeridId:
+EditAuctionTitle_buyeridId=BuyeridId
+EditAuctionLabel_isbnIsbn=Book Offered:
+EditAuctionTitle_isbnIsbn=IsbnIsbn
+EditAuctionLabel_paymentidId=PaymentidId:
+EditAuctionTitle_paymentidId=PaymentidId
+EditAuctionLabel_selleridId=SelleridId:
+EditAuctionTitle_selleridId=SelleridId
+ViewAuctionTitle=View
+#ViewAuctionDestroyLink=Destroy
+#ViewAuctionEditLink=Edit
+ViewAuctionCreateLink=Create New Auction
+ViewAuctionShowAllLink=Show All Auction Items
+ViewAuctionIndexLink=Index
+ViewAuctionLabel_id=Id:
+ViewAuctionTitle_id=Id
+ViewAuctionLabel_datelisted=Datelisted:
+ViewAuctionTitle_datelisted=Datelisted
+ViewAuctionLabel_duration=Duration:
+ViewAuctionTitle_duration=Duration
+ViewAuctionLabel_itemcondition=Item condition:
+ViewAuctionTitle_itemcondition=Itemcondition
+ViewAuctionLabel_postage=Postage:
+ViewAuctionTitle_postage=Postage
+ViewAuctionLabel_reserveprice=Reserve price:
+ViewAuctionTitle_reserveprice=Reserveprice
+ViewAuctionLabel_saleprice=Sale price:
+ViewAuctionTitle_saleprice=Saleprice
+ViewAuctionLabel_saletype=Saletype:
+ViewAuctionTitle_saletype=Saletype
+ViewAuctionLabel_startprice=Start price:
+ViewAuctionTitle_startprice=Startprice
+ViewAuctionLabel_buyeridId=BuyeridId:
+ViewAuctionTitle_buyeridId=BuyeridId
+ViewAuctionLabel_isbnIsbn=Book ISBN:
+ViewAuctionTitle_isbnIsbn=IsbnIsbn
+ViewAuctionLabel_paymentidId=PaymentidId:
+ViewAuctionTitle_paymentidId=PaymentidId
+ViewAuctionLabel_selleridId=SelleridId:
+ViewAuctionTitle_selleridId=SelleridId
+ListAuctionTitle=List
+ListAuctionEmpty=(No Auction Items Found)
+#ListAuctionDestroyLink=Destroy
+#ListAuctionEditLink=Edit
+ListAuctionViewLink=View
+ListAuctionCreateLink=Create New Auction
+ListAuctionIndexLink=Index
+ListAuctionTitle_id=Id
+ListAuctionTitle_datelisted=Datelisted
+ListAuctionTitle_duration=Duration
+ListAuctionTitle_itemcondition=Itemcondition
+ListAuctionTitle_postage=Postage
+ListAuctionTitle_reserveprice=Reserveprice
+ListAuctionTitle_saleprice=Saleprice
+ListAuctionTitle_saletype=Saletype
+ListAuctionTitle_startprice=Startprice
+ListAuctionTitle_buyeridId=BuyeridId
+ListAuctionTitle_isbnIsbn=IsbnIsbn
+ListAuctionTitle_paymentidId=PaymentidId
+ListAuctionTitle_selleridId=SelleridId
