--- a/src/main/java/javaeetutorial/dukesbookstore/web/messages/Messages.properties
+++ b/src/main/java/javaeetutorial/dukesbookstore/web/messages/Messages.properties
@@ -334,3 +334,5 @@ ListAuctionTitle_buyeridId=BuyeridId
 ListAuctionTitle_isbnIsbn=IsbnIsbn
 ListAuctionTitle_paymentidId=PaymentidId
 ListAuctionTitle_selleridId=SelleridId
+
+PersistenceErrorOccured=Persistence Error
